# browser-harness-rust

./: .gitignore  AGENTS.md  README.md  SKILL.md  install.md
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug-report.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/migration/: upstream-sync-2026-04-21.md
docs/: python-integration.md  snap-linux-headless.md  wasm-guests.md
domains/: README.md
domains/BOSS-zhipin/: chat.md  job-search.md  navigation.md
domains/agentlist/: discovery.md
domains/amazon/: cart.md  orders.md  product-search.md
domains/articulate-rise/: code-blocks.md
domains/arxiv/: skill.md
domains/arxiv-bulk/: skill.md
domains/atlas/: overview.md
interaction-skills/: connection.md  dropdowns.md  network-requests.md  screenshots.md  tabs.md  uploads.md
rust/: Cargo.toml  README.md
rust/bins/bhctl/src/: main.rs
rust/bins/bhd/src/: main.rs
rust/bins/bhrun/src/: main.rs
rust/bins/bhsmoke/src/: main.rs
rust/bins/browser-harness-cli/src/: main.rs
rust/crates/bh-cdp/src/: lib.rs
rust/crates/bh-daemon/: Cargo.toml
rust/crates/bh-daemon/src/: lib.rs
rust/crates/bh-discovery/: Cargo.toml
rust/crates/bh-discovery/src/: lib.rs
rust/crates/bh-guest-sdk/src/: lib.rs
rust/crates/bh-protocol/src/: lib.rs
rust/crates/bh-remote/src/: lib.rs
rust/crates/bh-wasm-host/src/: lib.rs
rust/guests/rust-tab-response-workflow/src/: lib.rs
(+78 files in other folders)
